@@ -1,6 +1,5 @@
 package com.example.ecm.service;
 
-import com.example.ecm.dto.patch_requests.PatchAttributeRequest;
 import com.example.ecm.dto.requests.CreateAttributeRequest;
 import com.example.ecm.dto.responses.CreateAttributeResponse;
 import com.example.ecm.exception.NotFoundException;
@@ -10,15 +9,10 @@ import com.example.ecm.model.DocumentType;
 import com.example.ecm.repository.AttributeRepository;
 import com.example.ecm.repository.DocumentTypeRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Stream;
-import java.util.stream.Collectors;
 
 /**
  * Сервис для работы с атрибутами документов.
@@ -39,7 +33,7 @@ public class AttributeService {
      * @return ответ с данными созданного атрибута документа
      */
     public CreateAttributeResponse createAttribute(CreateAttributeRequest request) {
-        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
+        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByNameIsIn(request.getDocumentTypesNames());
 
         Attribute attribute = attributeMapper.toAttribute(request);
         attribute.getDocumentTypes().addAll(documentTypes);
@@ -54,14 +48,8 @@ public class AttributeService {
      * @param id идентификатор атрибута документа
      * @return ответ с данными атрибута документа
      */
-    public CreateAttributeResponse getAttributeById(Long id, Boolean showOnlyALive) {
-        Optional<Attribute> attribute = attributeRepository.findById(id);
-
-        if (showOnlyALive) {
-            attribute = attribute.filter(Attribute::getIsAlive);
-        }
-
-        return attribute
+    public CreateAttributeResponse getAttributeById(Long id) {
+        return attributeRepository.findById(id)
                 .map(attributeMapper::toAttributeResponse)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
     }
@@ -71,35 +59,23 @@ public class AttributeService {
      *
      * @return список ответов с данными всех атрибутов документов
      */
-    public List<CreateAttributeResponse> getAllAttributes(Pageable pageable, Boolean showOnlyALive) {
-        Page<Attribute> attributePage = attributeRepository.findAll(pageable);
-        Stream<Attribute> attributeStream = attributePage.stream();
-
-        if (showOnlyALive) {
-            attributeStream = attributeStream.filter(Attribute::getIsAlive);
-        }
-
-        return new PageImpl<>(
-                attributeStream
-                        .map(attributeMapper::toAttributeResponse)
-                        .collect(Collectors.toList()),
-                pageable,
-                attributePage.getTotalElements()
-        ).getContent();
+    public List<CreateAttributeResponse> getAllAttributes() {
+        return attributeRepository.findAll().stream()
+                .map(attributeMapper::toAttributeResponse)
+                .toList();
     }
 
     /**
      * Обновляет атрибут документа по идентификатору.
      *
-     * @param id      идентификатор атрибута документа
+     * @param id идентификатор атрибута документа
      * @param request запрос на обновление атрибута документа
      * @return ответ с данными обновленного атрибута документа
      */
     public CreateAttributeResponse updateAttribute(Long id, CreateAttributeRequest request) {
         Attribute attribute = attributeRepository.findById(id)
-                .filter(Attribute::getIsAlive)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
-        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
+        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByNameIsIn(request.getDocumentTypesNames());
 
         attribute.setDocumentTypes(documentTypes);
         attribute.setName(request.getName());
@@ -114,46 +90,11 @@ public class AttributeService {
      */
     public void deleteAttribute(Long id) {
         Attribute attribute = attributeRepository.findById(id)
-                .filter(Attribute::getIsAlive)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
-        attribute.setIsAlive(false);
-        attributeRepository.save(attribute);
+        attributeRepository.delete(attribute);
     }
 
-    public void recoverAttribute(Long id) {
-        Attribute attribute = attributeRepository.findById(id)
-                .filter(attr -> !attr.getIsAlive())
-                .orElseThrow(() -> new NotFoundException("Deleted Attribute with id: " + id + " not found"));
-        attribute.setIsAlive(true);
-        attributeRepository.save(attribute);
-    }
-
-    /**
-     * Частичное обновление атрибута документа по идентификатору.
-     *
-     * @param id      идентификатор атрибута документа
-     * @param request запрос на частичное обновление атрибута документа
-     * @return ответ с данными обновленного атрибута документа
-     */
-
-    public CreateAttributeResponse patchAttribute(Long id, PatchAttributeRequest request) {
-        Attribute attribute = attributeRepository.findById(id)
-                .filter(Attribute::getIsAlive)
-                .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
-        if (request.getName() != null) {
-            attribute.setName(request.getName());
-        }
-
-        if (request.getRequired() != null) {
-            attribute.setRequired(request.getRequired());
-        }
-
-        if (request.getDocumentTypesIds() != null) {
-            List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
-            attribute.setDocumentTypes(documentTypes);
-        }
-
-
-        return attributeMapper.toAttributeResponse(attributeRepository.save(attribute));
+    public Optional<Attribute> findAttributeByName(String name) {
+        return attributeRepository.findByName(name);
     }
 }
